remove cicd stuff and make work with S2I

--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
   <packaging>pom</packaging>
 
   <modules>
-        <module>../CustomerOrderServices</module>
-        <module>../CustomerOrderServicesWeb</module>
-        <module>../CustomerOrderServicesTest</module>
-        <module>../CustomerOrderServicesApp</module>
+        <module>CustomerOrderServices</module>
+        <module>CustomerOrderServicesWeb</module>
+        <module>CustomerOrderServicesTest</module>
+        <module>CustomerOrderServicesApp</module>
   </modules>
 
 </project>
