--- a/src/main/liberty/config/server.env
+++ b/src/main/liberty/config/server.env
@@ -1,5 +1,5 @@
-DB2_HOST=172.16.52.252
-DB2_PORT=50000
+DB2_HOST=console-openshift-console.gse-appmod-cp4a-2-0143c5dd31acd8e030a1d6e0ab1380e3-0000.us-south.containers.appdomain.cloud
+DB2_PORT=31421
 DB2_DBNAME=ORDERDB
 DB2_USER=db2inst1
 DB2_PASSWORD=db2inst1
