--- a/CustomerOrderServicesWeb/pom.xml
+++ b/CustomerOrderServicesWeb/pom.xml
@@ -6,12 +6,12 @@
   <version>0.1.0-SNAPSHOT</version>
   <name>Customer Order Services Web Module</name>
   <packaging>war</packaging>
-  <parent>
+  <!--parent>
     <artifactId>project</artifactId>
     <groupId>org.pwte.example</groupId>
     <version>0.1.0-SNAPSHOT</version>
     <relativePath>../CustomerOrderServicesProject</relativePath>
-  </parent>
+  </parent-->
   <dependencies>
     <dependency>
       <groupId>org.pwte.example</groupId>
@@ -64,8 +64,8 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.6.1</version>
         <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
+          <source>1.8</source>
+          <target>1.8</target>
         </configuration>
       </plugin>
       <plugin>
