--- a/.gitignore
+++ b/.gitignore
@@ -26,9 +26,13 @@ dojo/**
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 /target/
-**/target/
+**/target/*
 .settings/
 bin/
 .odo/
 .vscode/
 .project
+**/dojo/*
+**/dojo_built/*
+
+.odo/odo-file-index.json
