--- a/CustomerOrderServicesEar/pom.xml
+++ b/CustomerOrderServicesEar/pom.xml
@@ -2,20 +2,19 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.pwte.example</groupId>
-  <artifactId>CustomerOrderServicesApp</artifactId>
+  <artifactId>CustomerOrderServicesEar</artifactId>
   <version>0.1.0-SNAPSHOT</version>
-  <name>CustomerOrderServicesApp</name>
-  <packaging>pom</packaging>
+  <name>CustomerOrderServicesEar</name>
+  <packaging>ear</packaging>
+ <parent>
+    <artifactId>CustomerOrderServicesApp</artifactId>
+    <groupId>org.pwte.example</groupId>
+    <version>0.1.0-SNAPSHOT</version>
+  </parent>
 
-<modules>
- <module>CustomerOrderServices</module>
- <module>CustomerOrderServicesWeb</module>
- <module>CustomerOrderServicesTest</module>
- <module>CustomerOrderServicesEar</module>
 
-</modules>
 
- <!--dependencies>
+  <dependencies>
     <dependency>
       <groupId>org.pwte.example</groupId>
       <artifactId>CustomerOrderServices</artifactId>
@@ -34,12 +33,32 @@
       <version>0.1.0-SNAPSHOT</version>
       <type>war</type>
     </dependency>
-</dependencies-->
-
+<dependency>
+      <groupId>net.wasdev.maven.tools.targets</groupId>
+      <artifactId>third-party</artifactId>
+      <version>RELEASE</version>
+      <type>pom</type>
+      <scope>provided</scope>
+</dependency>
+<dependency>
+      <groupId>net.wasdev.maven.tools.targets</groupId>
+      <artifactId>java-specs</artifactId>
+      <version>RELEASE</version>
+      <type>pom</type>
+      <scope>provided</scope>
+</dependency>
+<dependency>
+      <groupId>net.wasdev.maven.tools.targets</groupId>
+      <artifactId>liberty-spis</artifactId>
+      <version>RELEASE</version>
+      <type>pom</type>
+      <scope>provided</scope>
+</dependency>
+  </dependencies>
   <build>
     <plugins>
 
-<!--plugin>
+<plugin>
        <groupId>io.openliberty.tools</groupId>
        <artifactId>liberty-maven-plugin</artifactId>
        				<version>3.2</version>
@@ -52,7 +71,7 @@
         </runtimeArtifact>
            <appsDirectory>apps</appsDirectory>
        </configuration>
-   </plugin-->
+   </plugin>
 
     <plugin>
         <groupId>org.apache.maven.plugins</groupId>
@@ -71,7 +90,7 @@
         <configuration>
           <version>5</version>
           <generateModuleId>true</generateModuleId>
-          <outputDirectory>target/</outputDirectory>
+          <outputDirectory>../target/</outputDirectory>
           <modules>
             <ejbModule>
               <groupId>org.pwte.example</groupId>
