--- a/CustomerOrderServicesTest/pom.xml
+++ b/CustomerOrderServicesTest/pom.xml
@@ -6,6 +6,11 @@
   <version>0.1.0-SNAPSHOT</version>
   <name>Customer Order Services Test Module</name>
   <packaging>war</packaging>
+ <parent>
+    <artifactId>CustomerOrderServicesApp</artifactId>
+    <groupId>org.pwte.example</groupId>
+    <version>0.1.0-SNAPSHOT</version>
+  </parent>
   <!--parent>
     <artifactId>project</artifactId>
     <groupId>org.pwte.example</groupId>
