--- a/CustomerOrderServicesWeb/pom.xml
+++ b/CustomerOrderServicesWeb/pom.xml
@@ -6,12 +6,11 @@
   <version>0.1.0-SNAPSHOT</version>
   <name>Customer Order Services Web Module</name>
   <packaging>war</packaging>
-  <!--parent>
-    <artifactId>project</artifactId>
+  <parent>
+    <artifactId>CustomerOrderServicesApp</artifactId>
     <groupId>org.pwte.example</groupId>
     <version>0.1.0-SNAPSHOT</version>
-    <relativePath>../CustomerOrderServicesProject</relativePath>
-  </parent-->
+  </parent>
   <dependencies>
     <dependency>
       <groupId>org.pwte.example</groupId>
