--- a/CustomerOrderServicesEar/pom.xml
+++ b/CustomerOrderServicesEar/pom.xml
@@ -86,11 +86,11 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-ear-plugin</artifactId>
-        <version>2.6</version>
+        <version>3.0.2</version>
         <configuration>
           <version>5</version>
           <generateModuleId>true</generateModuleId>
-          <!--outputDirectory>target/</outputDirectory-->
+          <outputDirectory>${basedir}/target</outputDirectory>
           <modules>
             <ejbModule>
               <groupId>org.pwte.example</groupId>
