--- a/CustomerOrderServicesApp/pom.xml
+++ b/CustomerOrderServicesApp/pom.xml
@@ -2,18 +2,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.pwte.example</groupId>
-  <artifactId>CustomerOrderServicesEar</artifactId>
+  <artifactId>CustomerOrderServicesApp</artifactId>
   <version>0.1.0-SNAPSHOT</version>
-  <name>CustomerOrderServicesEar</name>
+  <name>Customer Order Services Application EAR</name>
   <packaging>ear</packaging>
  <parent>
-    <artifactId>CustomerOrderServicesApp</artifactId>
+    <artifactId>CustomerOrderServicesParent</artifactId>
     <groupId>org.pwte.example</groupId>
     <version>0.1.0-SNAPSHOT</version>
   </parent>
-
-
-
   <dependencies>
     <dependency>
       <groupId>org.pwte.example</groupId>
@@ -90,6 +87,7 @@
         <configuration>
           <version>5</version>
           <generateModuleId>true</generateModuleId>
+          <finalName>CustomerOrderServicesApp-0.1.0-SNAPSHOT</finalName>
           <outputDirectory>${basedir}/target</outputDirectory>
           <modules>
             <ejbModule>
